--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <script>
+        document.getElementById("Hello").innerHTML = "Hello Javascript!";
+    </script>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1 id="Hello">Hello World!</h1>
 </body>
 </html>
