--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    <script>
-        document.getElementById("Hello").innerHTML = "Hello Javascript!";
-    </script>
+    <script src="main.js"></script>
 </head>
 <body>
-    <h1 id="Hello">Hello World!</h1>
+    <h1 id="demo">Hello World!</h1>
+    <button type="button" onclick="document.getElementById('demo').innerHTML = 'Hello JavaScript!'">Click Me!</button>
+    <button type="button" onclick="document.getElementById('demo').innerHTML = 'Hello World!'">Don't Click Me!</button>
 </body>
 </html>
