--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <h1 id="demo">Hello World!</h1>
-    <button type="button" onclick="document.getElementById('demo').innerHTML = 'Hello JavaScript!'">Click Me!</button>
-    <button type="button" onclick="document.getElementById('demo').innerHTML = 'Hello World!'">Don't Click Me!</button>
+    <button type="button" onclick=myFunction()>Click Me!</button>
+    <button type="button" onclick=myFunction2()>Don't Click Me!</button>
+    <button type="button" onclick=something()>Don't Ever Click Me!</button>
+    <button onclick="window.print()">Print this page</button>
+    <button onclick="window.save()">Save this page</button>
 </body>
 </html>
