--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button type="button" onclick=something()>Don't Ever Click Me!</button>
     <button onclick="window.print()">Print this page</button>
     <button onclick="window.save()">Save this page</button>
-    <input type="number">
-    <button id= "cel()"onclick="">Enter</button>
+    <input type="number" id="cel">
+    <h1 id="result">Your result will appear here</h1>
 </body>
 </html>
