--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <button type="button" onclick=something()>Don't Ever Click Me!</button>
     <button onclick="window.print()">Print this page</button>
     <button onclick="window.save()">Save this page</button>
-    <input type="number" id="cel">
+    <input type="number" id="text">
     <h1 id="result">Your result will appear here</h1>
+    <h1 class="car item-1"></h1>
+    <h1 class="car item-2"></h1>
+    <h1 class="car item-3"></h1>
+    <h1 class="car item-4"></h1>
+    <h1 class="car item-5"></h1>
 </body>
 </html>
